--- a/PsiCon_2023.ipynb
+++ b/PsiCon_2023.ipynb
@@ -326,9 +326,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "psi4sym",
+   "display_name": "Symmetry",
    "language": "python",
-   "name": "psi4sym"
+   "name": "symmetry"
   },
   "language_info": {
    "codemirror_mode": {
@@ -340,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
